# pokercraft-local

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  INSTRUCTION_kr.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  run_cli.py  run_gui.py  tmp_my_staking_chunk.js  tmp_pokercraft_main.js  tmp_staking_profile_chunk.js
.github/workflows/: deploy-cloudflare.yml  deploy-web.yml  maturin.yml  pre-commit.yml  pyinstaller.yml  release_binaries.yml  test-web.yml  test.yml  twine.yml
convenient_scripts/: clean_outputs.sh  create_damavaco.sh
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: bankroll.rs  card.rs  equity.rs  errors.rs  lib.rs  utils.rs
crates/python/: Cargo.toml
crates/python/src/: lib.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: lib.rs
demo/: pokercraft-handhistory-damavaco.html  pokercraft-tournament-damavaco.html
docs/: WEB_MIGRATION_PLAN.md
examples/: GG20260309 - Tournament #847261953 - Example Tournament Summary.txt  pokercraft-random-100-tournament-summaries.txt  pokercraft-staking-export.user.js
examples/_zip_check/: GG20250213 - Tournament #501875583 - Classic Sprint Masters $21.50.txt  GG20250218 - Tournament #677298365 - Midnight Stack Special $1.10.txt  GG20250220 - Tournament #930883427 - Daily Stack Masters $54.00.txt  GG20250224 - Tournament #838263999 - Daily Stack Main $1.10.txt  GG20250309 - Tournament #175119896 - Deepstack Voyage Masters $1.10.txt  GG20250310 - Tournament #324837437 - Rapid Showdown Freezeout $2.75.txt  GG20250322 - Tournament #220312766 - Hyper Challenge Masters $2.75.txt  GG20250322 - Tournament #961164035 - Midnight Cup Sprint $3.30.txt  GG20250326 - Tournament #282738706 - Midnight Hunter Special $11.00.txt  GG20250328 - Tournament #648537665 - Rapid Showdown Sprint $27.50.txt  GG20250401 - Tournament #198905137 - Hyper Storm Knockout $3.30.txt  GG20250410 - Tournament #224510191 - Hyper Showdown Main $54.00.txt  GG20250414 - Tournament #726336370 - Bounty Cup Knockout $2.75.txt  GG20250422 - Tournament #485222696 - Classic Arena Sprint $11.00.txt  GG20250423 - Tournament #111808063 - Grand Voyage Warmup $8.80.txt  GG20250427 - Tournament #766924607 - Grand Storm Battle $1.10.txt  GG20250429 - Tournament #751614713 - Sunday Storm Series $2.75.txt  GG20250503 - Tournament #436478227 - Lucky Voyage Warmup $21.50.txt  GG20250510 - Tournament #197017759 - Mystery Cup Battle $2.75.txt  GG20250525 - Tournament #769501664 - Midnight Cup Sprint $16.50.txt  GG20250604 - Tournament #847642518 - Bounty Cup Battle $2.75.txt  GG20250613 - Tournament #911571570 - Sunday Festival Edition $11.00.txt  GG20250616 - Tournament #293193946 - Daily Voyage Sprint $54.00.txt  GG20250624 - Tournament #355792902 - Classic Challenge Knockout $54.00.txt  GG20250625 - Tournament #206041723 - Midnight Rush Edition $5.40.txt  GG20250628 - Tournament #931641303 - Rapid Stack Knockout $11.00.txt  GG20250709 - Tournament #916580321 - Lucky Cup Sprint $54.00.txt  GG20250716 - Tournament #318828016 - Grand Sprint Sprint $21.50.txt  GG20250730 - Tournament #183467120 - Bounty Challenge Special $11.00.txt  GG20250901 - Tournament #651445505 - Daily Voyage Freezeout $11.00.txt  GG20250903 - Tournament #120117339 - Turbo Rush Knockout $1.10.txt  GG20250903 - Tournament #405239076 - Mystery Cup Battle $3.30.txt  GG20250910 - Tournament #767527311 - Hyper Festival Battle $54.00.txt  GG20250919 - Tournament #830304271 - Bounty Voyage Sprint $3.30.txt  GG20250923 - Tournament #596651140 - Hyper Showdown Edition $16.50.txt  GG20250929 - Tournament #521826978 - Midnight Hunter Knockout $27.50.txt  GG20251018 - Tournament #826640248 - Rapid Challenge Special $5.40.txt  GG20251104 - Tournament #224832759 - Rapid Hunter Masters $16.50.txt  GG20251109 - Tournament #184316745 - Mystery Voyage Knockout $16.50.txt  GG20251109 - Tournament #336482942 - Daily Voyage Masters $27.50.txt  (+16 more)
examples/generated_tournament_summaries/: GG20250110 - Tournament #750788109 - Midnight Cup Freezeout $54.00.txt  GG20250121 - Tournament #818399379 - Midnight Voyage Battle $21.50.txt  GG20250210 - Tournament #373208391 - Bounty Festival Edition $11.00.txt  GG20250301 - Tournament #954026861 - Hyper Rush Special $21.50.txt  GG20250315 - Tournament #461668955 - Mystery Cup Series $8.80.txt  GG20250316 - Tournament #891556990 - Hyper Festival Special $5.40.txt  GG20250326 - Tournament #848548382 - Deepstack Clash Battle $2.75.txt  (+37 more)
examples/ui-mockups/: index.html  mockup-brand-inline.html  (+7 more)
pokercraft_local/: __init__.py  _rust.pyi  bankroll.py  constants.py  data_structures.py  export.py  gui.py  parser.py  translate.py  translation_values.json  utils.py  visualize.py
pokercraft_local_rust/: bankroll.rs  card.rs  equity.rs  errors.rs  lib.rs
python_tests/: test_hand_history.py  test_hu_cache.py  test_parser.py
scripts/: build-wasm.ps1  build-wasm.sh
web/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
(+109 files in other folders)
