[package]
name = "pokercraft_local_rust"
version = "0.1.0"
edition = "2021"
publish = false

#[[bin]]
#name = "generate_preflop_cache"
#path = "pokercraft_local_rust/bin/generate_preflop_cache/main.rs"

[lib]
name = "pokercraft_local_rust"
crate-type = ["cdylib", "lib"]
path = "pokercraft_local_rust/lib/lib.rs"

[dependencies]
itertools = "0.14"
once_cell = "1.21"
pyo3 = "0.26"
rand = "0.8.5"
rayon = "1.10"
rustfft = "6"
statrs = "0.18"
thiserror = "2.0"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

# The reason why `features` tab is added, see here:
# https://pyo3.rs/v0.23.5/faq.html#i-cant-run-cargo-test-or-i-cant-build-in-a-cargo-workspace-im-having-linker-issues-like-symbol-not-found-or-undefined-reference-to-_pyexc_systemerror
