[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/python",
    "crates/cli",
    "crates/wasm",
]

# Shared workspace settings
[workspace.package]
version = "3.0.0"
edition = "2021"
publish = false

[workspace.dependencies]
# Core dependencies
flate2 = "1.1"
itertools = "0.14"
once_cell = "1.21"
rand = "0.8.5"
rayon = "1.10"
rustfft = "6"
statrs = "0.18"
thiserror = "2.0"

# CLI dependencies
clap = { version = "4.5.48", features = ["derive"] }

# Python bindings
pyo3 = "0.26"

# WASM bindings
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"

# Internal crates
pokercraft-core = { path = "crates/core" }
