[package]
name = "pokercraft-wasm"
version.workspace = true
edition.workspace = true
description = "WebAssembly bindings for pokercraft-core"
publish.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]
console_error_panic_hook = ["dep:console_error_panic_hook"]

[dependencies]
pokercraft-core = { workspace = true, features = ["wasm"] }
wasm-bindgen.workspace = true
js-sys.workspace = true
console_error_panic_hook = { version = "0.1", optional = true }
# Enable JS random source for WASM
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
